# vulkan-learning

./: CMakeLists.txt
include/: numtypes.h
include/API/SDL3/: SDLFunctions.h  global.h
include/API/Vulkan/: global.h  vkCmd.h  vkDevice.h  vkFunctions.h  vkInstance.h  vkPhysicalDevice.h  vkSurface.h  vkSwapChain.h
include/Utils/: mathUtils.h
scripts/: generateVkFunctions.bat  generateVkFunctions.py
src/: main.c
src/API/SDL3/: SDLFunctions.c  global.c
src/API/Vulkan/: global.c  vkCmd.c  vkDevice.c  vkFunctions.c  vkInstance.c  vkPhysicalDevice.c  vkSurface.c  vkSwapChain.c
src/Utils/: mathUtils.c
